Extract timer to a separate component

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,5 @@
 <ion-content>
   <div class="content">
-    <ion-label>{{timeLeft}}</ion-label>
-    <ion-button (click)="startTimer()">Start</ion-button>
+    <app-timer></app-timer>
   </div>
 </ion-content>
