Move time dependency out of active timer component

--- a/src/app/libs/timer/timer.component.html
+++ b/src/app/libs/timer/timer.component.html
@@ -2,6 +2,7 @@
   <app-active-timer
     *ngSwitchCase="'ACTIVE_TIMER'"
     [timer]="timer"
+    [time]="time | async"
     (stop)="stopTimer()"
   >
   </app-active-timer>
