Add fasting time selector

--- a/src/app/libs/timer/timer.component.html
+++ b/src/app/libs/timer/timer.component.html
@@ -6,5 +6,13 @@
     (stop)="stopTimer()"
   >
   </app-active-timer>
-  <ion-button *ngSwitchDefault (click)="startTimer()">Start</ion-button>
+  <div *ngSwitchDefault>
+    <ion-item>
+      <ion-select [interfaceOptions]="selectOptions" interface="action-sheet" [(ngModel)]="fastingTime">
+        <ion-select-option *ngFor="let option of fastingOptions"
+                           [value]="option.value">{{option.label}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-button (click)="startTimer()">Start</ion-button>
+  </div>
 </ng-container>
